fixing timeline overflow

--- a/css/app.css
+++ b/css/app.css
@@ -125,6 +125,7 @@ a, a:hover {
 	margin-top: 50px !important;
 	white-space: nowrap;
 	overflow-x: auto;
+	overflow-y: hidden;
 	opacity: 0;
 }
 
